# django-lti-tool

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg
lti_tool/: __init__.py  admin.py  ags.py  apps.py  auth.py  exceptions.py  forms.py  httpclient.py  jwt.py  middleware.py  mixins.py  models.py  urls.py  views.py
lti_tool/templates/: deeplink.html  deeplink_redirect.html
