[metadata]
name = django-lti-tool
version = 0.0.1
description = LTI 1.3 tool integration for Django
long_description = file: README.rst
url = https://github.com/christophse/django-lti-tool/
author = Christoph Seifert
author_email = christoph.seifert@posteo.me
license = BSD-3-Clause

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django>=3.2,<4.0
    jwcrypto==1.0
    requests
